Include insetInView when calculating a width for a BookmarkButtonCell.

Bug: 796836
Change-Id: I7bf68b5b5ccc7d48923da231feccb97f9c0caa34